# tf_playground

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md  main.cpp
python/: CONFIG.py  README.md  classification.py  requirements.txt
